# ConfD

./: Experiments.md  README.md
ConfD-core/Dependency_Analyzer/: phase1.py  phase2.py  phase3.py
ConfD-core/Dependency_Analyzer/Trace_Analyzer/: CMakeLists.txt  trace_analyzer.cpp
ConfD-core/State_Generator/: README  README.md  config_state_builder.py  default_config.json  mke2fs_constraints.json  violate_config_state_builder.py
ConfD-core/Taint_Analyzer/: README.md  function_name  mke2fs_constraints.json  separate_objects.py
ConfD-core/Taint_Analyzer/interPro/: CMakeLists.txt  function_name  interPro.cpp  interPro.h  variable
ConfD-core/ZFS_State_Generator/: READMEZFS.md  zfs_config_state_builder.py  zfs_constraints.json  zfs_output.sh  zfs_output.txt  zfs_output_bad.sh  zfs_violate_config_state_builder.py
ConfD-plugins/Plugin#1:ConfD-specCk/: README.md  comparisonOutput.txt  jsonCompare.py  jsonfile.json  main.py  mke2fs_constraints.json  mkfs.xfs.8
ConfD-plugins/Plugin#2:ConfD-handlingCk/: README.md  configHandlingCk.py
ConfD-plugins/Plugin#3:ConfD-rfsck/: README.md
ConfD-plugins/Plugin#4:ConfD-gt-hydra/: README.md
ConfD-plugins/Plugin#5:ConfD-xfstests/: README  README.md  bulk_test  single_test  valid_combo.txt  valid_ext4.txt  valid_generic.txt  valid_xfs.txt  valid_xfs_1.txt
ConfD-plugins/Plugin#6:ConfD-e2fsprogs/: README  README.md  bulk_test  config_state.txt  single_test  valid_combo_fr.txt  valid_d_type.txt  valid_f_type.txt  valid_r_type.txt
